--- a/composer.json
+++ b/composer.json
@@ -45,9 +45,9 @@
         "test": "vendor/bin/phpcs && vendor/bin/phpunit && vendor/bin/psalm"
     },
     "require": {
-        "php": "^8.0",
-        "doctrine/instantiator": "^1.4",
-        "laravel/framework": "^8.0||^9.0"
+        "php": ">=8.0",
+        "doctrine/instantiator": "^1.4||^2.0",
+        "laravel/framework": "^8.0||^9.0||^10.0"
     },
     "require-dev": {
         "doctrine/coding-standard": "^9.0",
